--- a/libraries/exhibitions/templates/components/foursquare.html
+++ b/libraries/exhibitions/templates/components/foursquare.html
@@ -1,4 +1,5 @@
 {% load wagtailimages_tags %}
+<!-- NOTE: see CSS https://cca-staging.cca.edu/academics/test-division/test-program/ -->
 <h1>FOURSQUARE</h1>
 <h1>{{ page.title }}</h1>
 {% for header in page.header_image.all %}
