--- a/libraries/libraries/static/scss/components/exhibits/_settings.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_settings.scss
@@ -1,2 +1,4 @@
+$grey-border: lighten($black, 75%);
 $site-max-width: 1360px;
+$wrapper-default-horizontal-padding: 15px;
 $wrapper-medium-horizontal-padding: 50px;
