--- a/libraries/libraries/static/scss/exhibits.scss
+++ b/libraries/libraries/static/scss/exhibits.scss
@@ -41,6 +41,8 @@
 
 // -- Exhibits-specific
 @import 'components/exhibits/settings';
+@import 'components/exhibits/banner';
+@import 'components/exhibits/foursquare';
 @import 'components/exhibits/gallery';
 @import 'components/exhibits/header';
 @import 'components/exhibits/main-navigation';
