--- a/libraries/libraries/static/scss/components/exhibits/_gallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_gallery.scss
@@ -13,9 +13,13 @@ img {
 
 .gallery--title {
     font-family: $font-family-sans-serif;
-    font-size: 200%;
+    font-size: 150%;
     font-weight: 700;
     margin: 40px 0 30px;
+
+    @include respond($break-medium) {
+        font-size: 200%;
+    }
 }
 
 .gallery--work {
