--- a/libraries/libraries/static/scss/exhibits.scss
+++ b/libraries/libraries/static/scss/exhibits.scss
@@ -42,6 +42,7 @@
 // -- Exhibits-specific
 @import 'components/exhibits/settings';
 @import 'components/exhibits/banner';
+@import 'components/exhibits/details';
 @import 'components/exhibits/foursquare';
 @import 'components/exhibits/gallery';
 @import 'components/exhibits/header';
