--- a/libraries/libraries/static/scss/components/exhibits/_banner.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_banner.scss
@@ -22,23 +22,19 @@
 
 .banner--title {
     background: $white;
-    bottom: 2em;
     line-height: 1.3;
-    // use this just so its relative positioning doesn't cause huge white space
-    // gap between .banner and .main
-    float: left;
     font-family: $font-family-sans-serif;
     font-size: 150%;
     font-weight: 700;
+    margin: -2em 0 0;
     max-width: 80%;
-    padding: 1em $wrapper-default-horizontal-padding;
+    padding: 1em $wrapper-default-horizontal-padding 0;
     position: relative;
     z-index: 2;
 
     @include respond($break-medium) {
-        bottom: 3.5em;
         font-size: 250%;
         max-width: 50%;
-        padding: 1em $wrapper-medium-horizontal-padding;
+        padding: 1em $wrapper-medium-horizontal-padding 0;
     }
 }
