exhib - inverted logo, search icons for black header bar

--- a/libraries/exhibitions/templates/components/header.html
+++ b/libraries/exhibitions/templates/components/header.html
@@ -6,12 +6,11 @@
 			href="/"
 			title="CCA Libraries home"
 		>
-            <!-- TODO: "Libraries" font color needs to be inverted (white) in logo -->
 			<img
 				alt="CCA Libraries Logo"
 				class="header__logo"
 
-				src="{% static 'images/logo.png' %}"
+				src="{% static 'images/logo-inverted.png' %}"
 			/>
 		</a>
 
@@ -32,11 +31,10 @@
 			href="#search"
 			title="Search"
 		>
-            <!-- TODO: search icon color needs to be inverted (white) -->
 			<img
 				alt="Search Icon"
 				class="header__icon"
-				src="{% static 'images/search-icon.png' %}"
+				src="{% static 'images/search-icon-inverted.png' %}"
 			/>
 		</a>
 	</div>
