--- a/libraries/libraries/static/scss/components/exhibits/_header.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_header.scss
@@ -42,6 +42,7 @@
 
 .header__nav-link {
     border-bottom: 3px solid transparent;
+    border-left: 1px solid $grey-border;
     display: block;
     float: right;
     height: $header-height-small;
@@ -53,6 +54,7 @@
         // borders for search icon which is still visible
         border: 1px solid transparent;
         border-right: 0;
+        margin-right: 20px;
         display: none;
     }
 }
