--- a/libraries/libraries/static/scss/components/exhibits/_foursquare.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_foursquare.scss
@@ -2,3 +2,58 @@
 // "Foursquare" template style
 // Four square images set to the left of title
 // ===================================
+.foursquare {
+    margin: 0 auto 2em;
+    max-width: $site-max-width;
+    width: 100%;
+
+    @include respond($break-medium) {
+        display: flex;
+    }
+}
+
+.foursquare--images {
+    // need 0 size or white space between images disrupts layout
+    font-size: 0;
+    z-index: 1;
+
+    @include respond($break-medium) {
+        // again, fixes slight gap between <header> & <main> on medium screens
+        position: relative;
+        top: -3px;
+        width: 50%;
+    }
+}
+
+.foursquare--images__image {
+    display: inline;
+    width: 50%;
+}
+
+.foursquare--frontmatter {
+    max-width: 80%;
+    position: relative;
+    z-index: 2;
+
+    @include respond($break-medium) {
+
+        max-width: 50%;
+    }
+}
+
+.foursquare--frontmatter__title {
+    background: $white;
+    line-height: 1.3;
+    font-family: $font-family-sans-serif;
+    font-size: 150%;
+    font-weight: 700;
+    margin: -2em 0 0;
+    padding: 1em $wrapper-default-horizontal-padding 0;
+
+    @include respond($break-medium) {
+        font-size: 250%;
+        margin: 250px -2em;
+        max-width: 80%;
+        padding: 1em;
+    }
+}
