--- a/libraries/libraries/static/scss/exhibits.scss
+++ b/libraries/libraries/static/scss/exhibits.scss
@@ -46,6 +46,7 @@
 @import 'components/exhibits/foursquare';
 @import 'components/exhibits/gallery';
 @import 'components/exhibits/header';
+@import 'components/exhibits/home';
 @import 'components/exhibits/main-navigation';
 @import 'components/exhibits/page';
 @import 'components/exhibits/photoswipe';
