--- a/libraries/libraries/static/scss/exhibits.scss
+++ b/libraries/libraries/static/scss/exhibits.scss
@@ -47,6 +47,7 @@
 @import 'components/exhibits/gallery';
 @import 'components/exhibits/header';
 @import 'components/exhibits/home';
+@import 'components/exhibits/lightgallery';
 @import 'components/exhibits/main-navigation';
 @import 'components/exhibits/page';
 @import 'components/exhibits/photoswipe';
