--- a/libraries/libraries/static/scss/components/exhibits/_main-navigation.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_main-navigation.scss
@@ -18,11 +18,11 @@
 }
 
 .main-navigation__item {
-    border-bottom: 1px solid black(0.1);
+    border-bottom: 1px solid black(.1);
     color: $white;
     display: inline-block;
     padding: 0 13px;
-    transition: border 0.3s ease;
+    transition: border .3s ease;
 
     @include respond($break-medium) {
         border-bottom: 3px solid transparent;
