exhib - lightgallery zoom plugin

--- a/libraries/exhibitions/templates/components/artwork.html
+++ b/libraries/exhibitions/templates/components/artwork.html
@@ -1,9 +1,17 @@
 {% load wagtailcore_tags wagtailimages_tags %}
+
+{% comment %}
+TODO: conditions for different work types (image, audio, video, embed)
+{% endcomment %}
+
 <div class="gallery--work js-gallery--work">
     <div class="gallery--work__image">
         {% image work.image original as full_image %}
         {% image work.image max-600x600 as preview %}
-        <img src="{{preview.url}}" alt="{{preview.alt}}" width="{{preview.width}}" height="{{preview.height}}" data-src="{{full_image.url}}" />
+        <img src="{{ preview.url }}" alt="{{ preview.alt }}"
+        width="{{ preview.width }}" height="{{ preview.height }}"
+        data-src="{{ full_image.url }}" data-width="{{ full_image.width }}"
+        data-sub-html=".gallery--work__responsibility" />
     </div>
 
     <div class="gallery--work__responsibility">
