--- a/libraries/exhibitions/templates/exhibitions/exhibit_page.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibit_page.html
@@ -84,6 +84,7 @@ $(()=>{
 </script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/css/lightgallery.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/js/lightgallery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lg-zoom/1.1.0/lg-zoom.min.js"></script>
 <script>
 $(() => {
     let options = {
