exhib - support for work types

--- a/libraries/libraries/static/scss/components/exhibits/_gallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_gallery.scss
@@ -37,11 +37,12 @@ img {
     }
 }
 
-.gallery--work__image {
+.gallery--work__image,
+.gallery--work__html {
     z-index: 1;
 }
 
-.gallery--work__responsibility {
+.gallery--work__metadata {
     background: $white;
     line-height: 1.45;
     padding: 1em 0 3em;
