--- a/libraries/exhibitions/templates/components/artwork.html
+++ b/libraries/exhibitions/templates/components/artwork.html
@@ -4,20 +4,55 @@
 TODO: conditions for different work types (image, audio, video, embed)
 {% endcomment %}
 
+{% if work.type == 'image' %}
 {% image work.image original as full_image %}
-<div class="gallery--work js-gallery--work"
-    data-src="{{ full_image.url }}" data-width="{{ full_image.width }}"
-    data-sub-html=".js-caption">
+<div class="gallery--work js-gallery--work" data-src="{{ full_image.url }}"
+    data-width="{{ full_image.width }}" data-sub-html=".js-caption">
     <div class="gallery--work__image">
         {% image work.image max-600x600 %}
     </div>
 
-    <div class="gallery--work__responsibility js-caption">
-        {% comment %} title is required but creator is not {% endcomment %}
-        <h3 class="gallery--work__title"><strong>{{ work.title }}</strong></h3>
-        {% if work.creator != '' %}
-            <p class="gallery--work__creator">{{ work.creator }}</p>
+{% elif work.type == 'html' %}
+<div class="gallery--work js-gallery--work" data-iframe="true" data-src="{{ work.embed_code }}" data-html=".gallery--work__embed"
+    data-sub-html=".js-caption">
+    <div class="gallery--work__html">
+        {% if work.image %}
+            {% image work.image max-600x600 %}
+        {% else %}
+            <iframe class="responsive-embed" width="560" height="315" src="{{ work.embed_code }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         {% endif %}
+    </div>
+
+{% comment %} these types not supported yet {% endcomment %}
+
+{% elif work.type == 'video' %}
+<div class="gallery--work js-gallery--work" data-src="..."
+    data-sub-html=".js-caption">
+    <div class="gallery--work__video">
+    {% if work.image %}
+        {% image work.image max-600x600 %}
+    {% else %}
+        <img src="..." alt="video icon" />
+    {% endif %}
+    </div>
+
+{% elif work.type == 'audio' %}
+    {% if work.image %}
+        {% image work.image max-600x600 %}
+    {% else %}
+        <img src="..." alt="audio icon" />
+    {% endif %}
+
+{% endif %}
+
+    <div class="gallery--work__metadata js-caption">
+        {% comment %} title is required but creator is not {% endcomment %}
+        <div class="gallery--work__responsibility">
+            <h3 class="gallery--work__title"><strong>{{ work.title }}</strong></h3>
+            {% if work.creator != '' %}
+                <p class="gallery--work__creator">{{ work.creator }}</p>
+            {% endif %}
+        </div>
 
         {% comment %}
         description only shows in lightGallery overlay
