css - list-within-a-list margin bottom

--- a/libraries/libraries/static/scss/components/misc/_rich-text.scss
+++ b/libraries/libraries/static/scss/components/misc/_rich-text.scss
@@ -20,6 +20,7 @@
         // sub-lists should be empty circles
         ul {
             list-style-type: circle;
+            margin: 0;
         }
     }
 
