--- a/libraries/libraries/static/scss/components/blog/_blog-post.scss
+++ b/libraries/libraries/static/scss/components/blog/_blog-post.scss
@@ -169,6 +169,10 @@
     margin: 0 0 20px;
     padding: 15px;
 
+    p:last-child {
+        margin: 0;
+    }
+
     @include respond($break-medium) {
       padding: 20px;
     }
