--- a/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
@@ -57,3 +57,9 @@ $sub-html-padding: 40px;
         font-size: 20px;
     }
 }
+
+.lg-has-iframe {
+    // stop lightGallery controls from overlapping YouTube/iFrame controls
+    // = height of .lgtoolbar (10px padding each side, 27px line height)
+    padding-top: 47px;
+}
