--- a/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
@@ -20,7 +20,7 @@ $sub-html-padding: 40px;
 .lg-outer .lg-sub-html {
     color: $white;
     display: flex;
-    padding: 0 $sub-html-padding 1em;
+    padding: 0 $sub-html-padding;
     text-align: left;
 
     .gallery--work__responsibility {
