--- a/libraries/libraries/static/scss/components/exhibits/_gallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_gallery.scss
@@ -69,7 +69,8 @@ img {
 }
 
 // not shown initially, lightGallery displays in fullscreen mode
-.gallery--work__description {
+.gallery--work__description,
+.gallery--work__linked-title {
     display: none;
 }
 
