--- a/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
@@ -56,4 +56,15 @@ $sub-html-padding: 40px;
         font-family: $font-family-sans-serif;
         font-size: 20px;
     }
+    .gallery--work__unlinked-title {
+        display: none;
+    }
+    .gallery--work__linked-title {
+        display: block;
+
+        a {
+            color: $turquoise;
+            text-decoration: none;
+        }
+    }
 }
