exhib - bump description font in lightgallery

--- a/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_lightgallery.scss
@@ -18,6 +18,10 @@ $sub-html-padding: 40px;
 
 // 1st selector just needed for specificity
 .lg-outer .lg-sub-html {
+    p {
+        font-size: 14px;
+    }
+
     color: $white;
     display: flex;
     padding: 0 $sub-html-padding;
